# cdes-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/cdes_mcp_server/: __init__.py  problem_details.py  server.py
src/cdes_mcp_server/reference/: cannabinoid-library.json  terpene-colors.json  terpene-library.json
src/cdes_mcp_server/schemas/v1/: cannabinoid-profile.json  coa.json  rating-aggregate.json  rating.json  strain.json  terpene.json
tests/: test_server.py
